<resources>
    <string name="app_name">智慧皖粮</string>
    <string name="info">请将手机贴近RFID卡片</string>
    <string name="path">http://ctdz804.iask.in:21054/</string>
    <string name="login">/grain/storeHouseApp/login.html</string>
    <string name="getHouseList">/grain/storeHouseApp/getStoreHouseListByEmplyNo.html</string>
    <string name="getStoreInfo">/grain/storeHouseApp/getStoreInfoByBusinessNum.html</string>
    <string name="getDebuctionList">/grain/storeHouseApp/getStoreDebuctionList.html</string>
    <string name="getHouseInfor">/grain/storeHouseApp/getHouseInfor.html</string>
    <string name="finish">/grain/storeHouseApp/finishStoreHouse.html</string>
    <string name="showBarnRsvtempList">/grain/storeHouseApp/showBarnRsvtempList.html</string>
    <string name="show3DDate">/grain/storeHouseApp/show3DDate.html</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="strIp">60.174.105.239</string>
    <string name="strPort">81</string>
    <string name="strUser">shengju</string>
    <string name="strPassword">shengju</string>
    <string name="DemoInit">演示程序初始化</string>
    <string name="DemoExit">演示程序退出</string>
    <string name="SDKVersion">网络SDK版本：</string>
    <string name="login_mode_activity_title">登录方式</string>
    <string name="login_mode_activity_info">请选择合适的登录环境：</string>
    <string name="login_mode_activity_ip">IP</string>
    <string name="login_mode_activity_p2p">P2P</string>
    <string name="p2p_activity_title">P2P配置</string>
    <string name="p2p_activity_ip">服务器地址：</string>
    <string name="p2p_activity_port">服务器端口：</string>
    <string name="p2p_activity_password">登录秘钥：</string>
    <string name="p2p_activity_dev_id">设备序列号：</string>
    <string name="p2p_activity_dev_port">设备端口：</string>
    <string name="p2p_activity_config">配置</string>
    <string name="p2p_activity_autologin">记住配置信息</string>
    <string name="login_activity_port_err">请检查端口</string>
    <string name="login_activity_title">登录</string>
    <string name="login_activity_ip">设备地址：</string>
    <string name="login_activity_port">设备端口：</string>
    <string name="login_activity_user">用户名：</string>
    <string name="login_activity_password">密码：</string>
    <string name="login_activity_login">登录</string>
    <string name="login_activity_login_success">登录成功</string>
    <string name="login_activity_login_failed">登录失败</string>
    <string name="login_activity_autologin">记住登录信息</string>
    <string name="fun_activity_title">功能选择</string>
    <string name="GlobalSetting">全局设置</string>
    <string name="MultiPlay">多画面预览</string>
    <string name="RealPlay">实时监控</string>
    <string name="Talk">语音对讲</string>
    <string name="FilePlayBack">按文件回放</string>
    <string name="TimePlayBack">按时间回放</string>
    <string name="PicPlayBack">按图片回放</string>
    <string name="Alarm">报警</string>
    <string name="UserMan">用户管理</string>
    <string name="DiskInfo">硬盘信息</string>
    <string name="RecordPlan">录像计划</string>
    <string name="MotionDetect">动态检测</string>
    <string name="ShelterDetect">视频遮挡</string>
    <string name="TestInterface">接口测试</string>
    <string name="fun_alarm_out">报警输出</string>
    <string name="intelbrass">无线报警主机</string>
    <string name="global_setting_activity_title">全局设置</string>
    <string name="global_setting_activity_chn">视频通道：</string>
    <string name="global_setting_activity_pb_stream">回放码流：</string>
    <string name="global_setting_activity_pb_stream_all">主辅码流</string>
    <string name="global_setting_activity_pb_stream_main">主码流</string>
    <string name="global_setting_activity_pb_stream_sub">辅码流</string>
    <string name="multi_play_activity_title">多画面预览</string>
    <string name="multi_play_activity_info">设备不支持多画面预览</string>
    <string name="multi_play_activity_start">开始</string>
    <string name="multi_play_activity_stop">停止</string>
    <string name="multi_play_activity_type_prm">请选择画面数量</string>
    <string name="multi_play_activity_mp_1">1 画面</string>
    <string name="multi_play_activity_mp_4">4 画面</string>
    <string name="multi_play_activity_mp_8">8 画面</string>
    <string name="multi_play_activity_mp_9">9 画面</string>
    <string name="multi_play_activity_mp_16">16 画面</string>
    <string name="multi_play_activity_mp_6">6 画面</string>
    <string name="multi_play_activity_mp_12">12 画面</string>
    <string name="multi_play_activity_mp_25">25 画面</string>
    <string name="multi_play_activity_mp_36">36 画面</string>
    <string name="multi_play_activity_chn_prm">请选择起始通道</string>
    <string name="live_activity_title">实时监控</string>
    <string name="live_activity_ptz">云台控制</string>
    <string name="live_activity_flash">灯光控制</string>
    <string name="live_activity_start">开始录像</string>
    <string name="live_activity_stop">停止录像</string>
    <string name="live_activity_open_sound">声音</string>
    <string name="live_activity_close_sound">静音</string>
    <string name="live_activity_encode">码流配置</string>
    <string name="live_activity_capture">本地抓图</string>
    <string name="live_activity_snap">远程抓图</string>
    <string name="live_activity_volume">音量</string>
    <string name="live_activity_quality">画质</string>
    <string name="live_activity_speed_1">速度: 1</string>
    <string name="live_activity_speed_2">速度: 2</string>
    <string name="live_activity_speed_3">速度: 3</string>
    <string name="live_activity_speed_4">速度: 4</string>
    <string name="live_activity_speed_5">速度: 5</string>
    <string name="live_activity_speed_6">速度: 6</string>
    <string name="live_activity_speed_7">速度: 7</string>
    <string name="live_activity_speed_8">速度: 8</string>
    <string name="flash_enable">使能</string>
    <string name="live_activity_more">其余</string>
    <string name="live_activity_Up">上</string>
    <string name="live_activity_Left">左</string>
    <string name="live_activity_Right">右</string>
    <string name="live_activity_Down">下</string>
    <string name="live_activity_LUp">左上</string>
    <string name="live_activity_RUp">右上</string>
    <string name="live_activit_LDown">左下</string>
    <string name="live_activity_RDown">右下</string>
    <string name="live_activity_Speed">速度</string>
    <string name="live_activity_z_add">变倍+</string>
    <string name="live_activity_z_dec">变倍-</string>
    <string name="live_activity_f_add">变焦+</string>
    <string name="live_activity_f_dec">变焦-</string>
    <string name="live_activity_a_add">光圈+</string>
    <string name="live_activity_a_dec">光圈-</string>
    <string name="live_activity_speed_prom">选择云台控制速度</string>
    <string name="live_activity_assist">助手</string>
    <string name="encode_activity_title">码流配置</string>
    <string name="encode_activity_mode">压缩格式：</string>
    <string name="encode_activity_resolution">分辨率：</string>
    <string name="encode_activity_fps">帧率(FPS)：</string>
    <string name="encode_activity_bitrate">码流：</string>
    <string name="encode_activity_set">设置</string>
    <string name="encode_activity_bitrate_ref">码流范围：</string>
    <string name="quality_activity_bright">亮度</string>
    <string name="quality_activity_contrast">对比度</string>
    <string name="quality_activity_saturation">饱和度</string>
    <string name="quality_activity_huen">色调</string>
    <string name="search_activity_title">查询录像</string>
    <string name="search_activity_search">查询</string>
    <string name="play_back_by_file_activity_title">按文件回放</string>
    <string name="play_back_by_time_activity_title">按时间回放</string>
    <string name="play_back_by_time_activity_start">回放录像</string>
    <string name="play_back_by_pic_title">按图片回放</string>
    <string name="play_back_by_pic_play">回放图片</string>
    <string name="play_back_by_pic_info_no_pic">没有可供显示的图片</string>
    <string name="talk_activity_title">语音对讲</string>
    <string name="CodeType">编码类型：</string>
    <string name="StartTalk">开始对讲</string>
    <string name="StopTalk">结束对讲</string>
    <string name="SpeakOnly">喊话</string>
    <string name="EnableWait">等待超时</string>
    <string name="alarm_activity_title">报警查询订阅</string>
    <string name="alarm_activity_enable">报警布防</string>
    <string name="alarm_activity_external">外部报警</string>
    <string name="alarm_activity_lost">视频丢失</string>
    <string name="alarm_activity_dynamic">动态检测</string>
    <string name="alarm_activity_shelter">遮挡报警</string>
    <string name="alarm_activity_static">静态报警</string>
    <string name="alarm_activity_query">查询告警状态</string>
    <string name="alarm_activity_start">开始监听</string>
    <string name="alarm_activity_stop">停止监听</string>
    <string name="alarm_activity_alarm_in">报警输入</string>
    <string name="alarm_activity_alarm_out">报警输出</string>
    <string name="user_manager_title">用户管理</string>
    <string name="user_manager_group">用户组：</string>
    <string name="user_manager_user">用户：</string>
    <string name="user_manager_right">权限：</string>
    <string name="user_manager_old_psw">旧密码：</string>
    <string name="user_manager_new_psw">新密码：</string>
    <string name="user_manager_conf_psw">确认密码：</string>
    <string name="user_manager_modify_psw">修改密码</string>
    <string name="user_manager_psw_dif">输入的两次新密码不一样</string>
    <string name="disk_info_title">硬盘信息</string>
    <string name="disk_info_name">名称：</string>
    <string name="disk_info_state">状态：</string>
    <string name="disk_info_rest">剩余容量：</string>
    <string name="disk_info_total">总容量：</string>
    <string name="disk_info_disk_name">硬盘</string>
    <string name="disk_info_hiberation">休眠</string>
    <string name="disk_info_active">活动</string>
    <string name="disk_info_malfucntion">故障</string>
    <string name="record_plan_title">录像计划</string>
    <string name="record_plan_chn">通道：</string>
    <string name="record_plan_pre_rec">预录(s)：</string>
    <string name="record_plan_redundancy">录像冗余</string>
    <string name="record_plan_stream">码流：</string>
    <string name="record_plan_day">星期：</string>
    <string name="record_plan_seg">时间段：</string>
    <string name="record_plan_start">开始时间：</string>
    <string name="record_plan_stop">停止时间：</string>
    <string name="record_plan_save">保存</string>
    <string name="record_plan_seg1">时间段 1</string>
    <string name="record_plan_seg2">时间段 2</string>
    <string name="record_plan_seg3">时间段 3</string>
    <string name="record_plan_seg4">时间段 4</string>
    <string name="record_plan_seg5">时间段 5</string>
    <string name="record_plan_seg6">时间段 6</string>
    <string name="record_plan_motion">动检</string>
    <string name="record_plan_alarm">报警</string>
    <string name="record_plan_normal">普通</string>
    <string name="record_plan_motionandalarm">动检&#038;报警</string>
    <string name="record_plan_get_failed">获取录像配置计划失败</string>
    <string name="record_plan_prerec_failed">预录时间超出范围</string>
    <string name="record_plan_time_failed">开始时间大于结束时间</string>
    <string name="record_plan_time_invalid">开始时间或者结束时间非法</string>
    <string name="intelbrass_title">无线报警主机</string>
    <string name="intelbrass_armed">整体布撤防</string>
    <string name="intelbrass_armed_mode">模式：</string>
    <string name="intelbrass_armed_scene">场景：</string>
    <string name="intelbrass_armed_psw">密码：</string>
    <string name="intelbrass_subsystem">子区布撤防</string>
    <string name="intelbrass_subsystem_chn">通道：</string>
    <string name="intelbrass_subsystem_active">启用：</string>
    <string name="intelbrass_bypass">旁路设置</string>
    <string name="intelbrass_bypass_local_chn">本地通道： </string>
    <string name="intelbrass_start_alarmbell">有声报警 </string>
    <string name="intelbrass_silent_alarmbell">无声报警 </string>
    <string name="intelbrass_bell_chn">通道：</string>
    <string name="intelbrass_bell_active">警号：</string>
    <string name="set_config">设置</string>
    <string name="bt_return">返回</string>
    <string name="play_back_pause">暂停</string>
    <string name="play_back_fast">快进</string>
    <string name="play_back_slow">慢放</string>
    <string name="play_back_normal">常速</string>
</resources>