<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/bt_loginmode_p2p"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bt_loginmode_ip"
        android:layout_centerVertical="true"
        android:text="@string/login_mode_activity_p2p" />

    <TextView
        android:id="@+id/tv_loginmode_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:text="@string/login_mode_activity_info" />

    <Button
        android:id="@+id/bt_loginmode_ip"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_loginmode_p2p"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/login_mode_activity_ip" />

</RelativeLayout>
